--- a/index.html
+++ b/index.html
@@ -989,5 +989,47 @@ function copiarPix() {
     alert("Chave Pix copiada!");
 }
 </script>
-</body>
+<!-- ==========================
+PÁGINA DE PAGAMENTO PIX (TELA CHEIA)
+========================== -->
+<style>
+#pagamentoPage {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 99999;
+    display: none;
+    flex-direction: column;
+    padding: 20px;
+    overflow-y: auto;
+}
+
+#pagamentoPage h2 {
+    text-align: center;
+}
+
+#pagamentoPage img {
+    width: 100%;
+    max-width: 350px;
+    height: 220px;
+    object-fit: cover;
+    border-radius: 12px;
+    display: block;
+    margin: 10px auto;
+}
+
+.pixBox {
+    background: #f5f5f5;
+    padding: 15px;
+    border-radius: 10px;
+    border: 2px solid #ddd;
+}
+
+.pixChave {
+    font-size: 18px;
+    text-align: center;
+    font-weight: bold;</body>
 </html>
