--- a/index.html
+++ b/index.html
@@ -1076,3 +1076,43 @@ body {
     text-align: center;
     font-weight: bold;</body>
 </html>
+/* ==== CORREÇÃO DA LARGURA DO SITE ==== */
+
+body {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1100px; /* largura boa */
+    margin: auto;
+}
+
+.cursos {
+    width: 100%;
+    max-width: 1100px;
+    margin: 20px auto;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+.curso {
+    width: 100%;
+    max-width: 100%;
+}
+
+header {
+    max-width: 1100px;
+    margin: auto;
+}
+
+/* Evitar que algum elemento fique gigante */
+* {
+    box-sizing: border-box;
+    }
